<resources>
    <string name="ATCI_disable">Disable ATCI</string>
    <string name="ATCI_enable">Enable ATCI Once</string>
    <string name="ATCI_enable_always">Always enable ATCI</string>
    <string name="ATCI_title">ATCI</string>
    <string name="Audio">Audio</string>
    <string name="Audio_AecRec">Record with AEC enable</string>
    <string name="Audio_AecRec_Text">Enable recording with AEC processing</string>
    <string name="Audio_AncLogger_Enable">Enable ANC Logger</string>
    <string name="Audio_AncLogger_FileText">File:/data/vendor/audiohal/audio_dump/ANC_log</string>
    <string name="Audio_AudioCommand">AudioCommand</string>
    <string name="Audio_AudioLogger">Audio Logger</string>
    <string name="Audio_AudioLogger_Text">File:/sdcard/mtklog/audio_dump/*.pcm</string>
    <string name="Audio_AudioParameter">AudioParameter</string>
    <string name="Audio_CTM4WAYLogger_Enable">Enable</string>
    <string name="Audio_CTM4WAYLogger_EnableText">Enable CTM4WAY Logger</string>
    <string name="Audio_Custom_Param">Customized audio parameter enable</string>
    <string name="Audio_Custom_Param_Title">Enable customized audio parameter</string>
    <string name="Audio_DebugInfo">Audio_DebugInfo</string>
    <string name="Audio_DebugInfo_Button">Set</string>
    <string name="Audio_DebugInfo_EditText">0</string>
    <string name="Audio_DebugInfo_ParameterText">Please choose the parameter:</string>
    <string name="Audio_DebugInfo_ValueText">Please input the value:</string>
    <string name="Audio_DebugSession">Audio_DebugSession</string>
    <string name="Audio_Dump_SpeechDbgInfo">Dump Speech Debug Info</string>
    <string name="Audio_EPLDebug_Enable">Enable AP Speech log</string>
    <string name="Audio_EPLDebug_FileText">File:/data/vendor/audiohal/audio_dump/</string>
    <string name="Audio_Enable_Down">Down-Sample</string>
    <string name="Audio_Enable_EPL">Normal-VM + EPL</string>
    <string name="Audio_Enable_NoDown">No Down-Sample</string>
    <string name="Audio_Enable_Normalvm">Normal-VM Only</string>
    <string name="Audio_Fir_Title">Current FIR Type</string>
    <string name="Audio_Get">Get</string>
    <string name="Audio_Headset_Detect_Button">Detect</string>
    <string name="Audio_Headset_Detect_Hint">Headset Jak Detection:</string>
    <string name="Audio_Headset_Jak_Headphone">Headphone</string>
    <string name="Audio_Headset_Jak_Headset">Headset</string>
    <string name="Audio_Headset_None">None</string>
    <string name="Audio_Hybrid_Dynamic">Hybrid NLE enable</string>
    <string name="Audio_Hybrid_Dynamic_Title">Enable hybrid Noise Level Enhancement (NLE) processing</string>
    <string name="Audio_Hybrid_Dynamic_edit_Text">Eop: [0, -96]</string>
    <string name="Audio_Hybrid_Dynamic_set">Set</string>
    <string name="Audio_Level_Text">Level</string>
    <string name="Audio_MagiAsr">MagiASR Verify Mode Enable</string>
    <string name="Audio_MagiAsr_Text">Enable using Sound Recorder to verify MagiASR feature</string>
    <string name="Audio_MagiConference_Enable">Enable</string>
    <string name="Audio_MagiConference_EnableText">Enable MagiConference</string>
    <string name="Audio_MaxVol_Set">Set</string>
    <string name="Audio_MaxVol_Text">Max Vol. 0~160</string>
    <string name="Audio_MaxVol_Text_headset">Max Headset Vol. 0~160</string>
    <string name="Audio_MaxVol_Text_speaker">Max Speaker Vol. 0~160</string>
    <string name="Audio_ModeSetting">Audio_ModeSetting</string>
    <string name="Audio_ModeSetting_Button">Set</string>
    <string name="Audio_ModeSetting_EditText">0</string>
    <string name="Audio_ModeSetting_TextView">Value is 0~255</string>
    <string name="Audio_ModeSetting_Title">Type</string>
    <string name="Audio_Set">Set</string>
    <string name="Audio_SpEnhancement_Button">Set</string>
    <string name="Audio_SpEnhancement_EditText">0</string>
    <string name="Audio_SpEnhancement_TextView">Value is 0~100</string>
    <string name="Audio_SpeechEnhancement">Audio_SpeechEnhancement</string>
    <string name="Audio_SpeechLogger">Speech Logger</string>
    <string name="Audio_SpeechLogger_Enable">Enable speech log</string>
    <string name="Audio_SpeechLogger_FileText">File:/data/vendor/audiohal/audio_dump/VM_log</string>
    <string name="Audio_SpeechLogger_LocationText">File location:/sdcard/speechlog</string>
    <string name="Audio_SpeechLogger_Play">Play log</string>
    <string name="Audio_clear_dump">Clear HAL dump</string>
    <string name="Audio_copy_dump_done">Moving HAL dump done</string>
    <string name="Audio_copy_progress">Copying %1$s (%2$f MB/ %3$f MB)</string>
    <string name="Audio_delete_dump_done">Clear HAL dump done</string>
    <string name="Audio_delete_progress">Deleting %s (</string>
    <string name="Audio_hal_dump">HAL dump management</string>
    <string name="Audio_move_to_sdcard">Copy to SDCard</string>
    <string name="Audio_stop_moving">Stop copying</string>
    <string name="Audio_stop_moving_text">Stop moving HAL dump</string>
    <string name="AutoAnswer">AutoAnswer</string>
    <string name="BandModeSIMSelect">SIM Select</string>
    <string name="BandSel_CDMA">CDMA Mode</string>
    <string name="BandSel_GSM">GSM Mode</string>
    <string name="BandSel_NR">NR Mode</string>
    <string name="BandSel_RESET">Reset to default</string>
    <string name="BandSel_SET">SET</string>
    <string name="BandSel_UMTS">UMTS Mode</string>
    <string name="BandSelect">Band Mode</string>
    <string name="BatteryLog">BatteryLog</string>
    <string name="ChannelLock">ChannelLock</string>
    <string name="ChargeBattery">ChargeBattery</string>
    <string name="Enter_msl_code">Please enter MSL code to proceed.</string>
    <string name="GPRS">GPRS</string>
    <string name="GPRS_1000">1000</string>
    <string name="GPRS_1st_PDP">1st PDP</string>
    <string name="GPRS_2nd_PDP">2nd PDP</string>
    <string name="GPRS_ALWAYS_ATTACH">Always Attach</string>
    <string name="GPRS_ALWAYS_ATTACH_CONTINUE">Always Attach Continue</string>
    <string name="GPRS_Activate_PDP">Activate PDP</string>
    <string name="GPRS_As_Primary">As Primary</string>
    <string name="GPRS_As_Secondary">As Secondary</string>
    <string name="GPRS_Attached">Attached</string>
    <string name="GPRS_CANCEL_SPECIFY">Not to Specify</string>
    <string name="GPRS_Deactivate_PDP">Deactivate PDP</string>
    <string name="GPRS_Detached">Detached</string>
    <string name="GPRS_Send_Data">Send Data</string>
    <string name="GPRS_WHEN_NEEDED">When Needed</string>
    <string name="GPRS_WHEN_NEEDED_CONTINUE">When Needed Continue</string>
    <string name="GPRS_pdn_reuse_off">PDN reuse off</string>
    <string name="GPRS_pdn_reuse_on">PDN reuse on</string>
    <string name="IDi">IDi:</string>
    <string name="IDr">IDr:</string>
    <string name="Iinterval">interval</string>
    <string name="Incorrect_password">You have entered incorrect password</string>
    <string name="MDM_name">MDML EM Components</string>
    <string name="NetworkInfo_3GSecurityConfiguration">3GSecurityConfiguration</string>
    <string name="NetworkInfo_3GSlceVoice">3GSpeechCodec</string>
    <string name="NetworkInfo_PageDown">PageDown</string>
    <string name="NetworkInfo_PageUp">PageUp</string>
    <string name="PMU">PMU</string>
    <string name="Power">Power</string>
    <string name="Reset_warning">Warning: This operation will reset your phone to factory defaults.All personal information will be lost.Do you want to continue?</string>
    <string name="SIM1">SIM1</string>
    <string name="SIM2">SIM2</string>
    <string name="Send">Send</string>
    <string name="Send_spc">Send Spc</string>
    <string name="Sim_not_ready">Sim or Phone not ready</string>
    <string name="USB_IF_Elec_Test_Text">Electrical Test</string>
    <string name="USB_IF_TEST">USB IF Test</string>
    <string name="USB_IF_Text_START">START</string>
    <string name="USB_IF_Text_STOP">STOP</string>
    <string name="aal_title">AAL</string>
    <string name="aol_test">AOL Test</string>
    <string name="audio">Audio</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_save">Save</string>
    <string name="camera">Camera</string>
    <string name="device_register">Device Register</string>
    <string name="framerate">framerate</string>
    <string name="height">height</string>
    <string name="hqa_nfc_106">106kbps</string>
    <string name="hqa_nfc_212">212kbps</string>
    <string name="hqa_nfc_424">424kbps</string>
    <string name="hqa_nfc_848">848kbps</string>
    <string name="hqa_nfc_active_mode">Active mode</string>
    <string name="hqa_nfc_ascii">ASCII:</string>
    <string name="hqa_nfc_clear_all">Clear All</string>
    <string name="hqa_nfc_disable_card_emul">Disable Card Emulation</string>
    <string name="hqa_nfc_hex">HEX:</string>
    <string name="hqa_nfc_initiator">Initiator</string>
    <string name="hqa_nfc_passive_mode">Passive mode</string>
    <string name="hqa_nfc_payload">Payload:</string>
    <string name="hqa_nfc_payload_length">Payload length:</string>
    <string name="hqa_nfc_record_flag">Record flag:</string>
    <string name="hqa_nfc_record_id">Record ID:</string>
    <string name="hqa_nfc_record_inf">Record Inf:</string>
    <string name="hqa_nfc_return">Return</string>
    <string name="hqa_nfc_run_back">Run in Background</string>
    <string name="hqa_nfc_rw_cancel">Cancel</string>
    <string name="hqa_nfc_rw_read">Read</string>
    <string name="hqa_nfc_select_all">Default</string>
    <string name="hqa_nfc_start">Start</string>
    <string name="hqa_nfc_target">Target</string>
    <string name="hqa_nfc_title_ndef">Read NDEF Tag</string>
    <string name="hqa_nfc_title_type">NDEF Tag Type</string>
    <string name="hqa_nfc_type_lang">Lang:</string>
    <string name="hqa_nfc_type_others">Others</string>
    <string name="hqa_nfc_type_smart">Smart Poster</string>
    <string name="hqa_nfc_type_text">Text</string>
    <string name="hqa_nfc_type_uri">URI</string>
    <string name="hqa_nfc_typea">TypeA</string>
    <string name="hqa_nfc_typef">TypeF</string>
    <string name="level">level</string>
    <string name="lte_4RX_single_band_setting">4RX single band setting</string>
    <string name="lte_4x4MIMO_single_band_setting">4x4MIMO single band setting</string>
    <string name="lte_ca_set">Set</string>
    <string name="lte_rx_mimo_4_momo">4X4 MIMO</string>
    <string name="lte_rx_mimo_4_momo_under_cca">4X4 MIMO under CCA</string>
    <string name="lte_rx_mimo_configure">LTE RX/MIMO Configure</string>
    <string name="lte_rx_mimo_feature_enable">Feature Enable</string>
    <string name="lte_rx_mimo_ras_2rx_1rx">RAS_2RX_1RX switching</string>
    <string name="lte_rx_mimo_ras_4rx_2rx">RAS_4RX_2RX switching</string>
    <string name="lte_rx_mimo_ras_4rx_2rx_under_cca">RAS_4RX_2RX under CCA</string>
    <string name="maxBitRate">maxBitRate</string>
    <string name="memory">Memory</string>
    <string name="minBitRate">minBitRate</string>
    <string name="name">name</string>
    <string name="non_sleep_mode">Non-sleep mode</string>
    <string name="power">Power</string>
    <string name="profile">profile</string>
    <string name="quality">quality</string>
    <string name="sensor_hub_test">Sensor Test</string>
    <string name="str_vilte_title">VILTE operator video spec setting</string>
    <string name="support">support</string>
    <string name="uart_usb_switch">UART/USB switch</string>
    <string name="usb">USB</string>
    <string name="usb_super_speed_switch">Super Speed Switch</string>
    <string name="vilte_input_name">Input name of the video spec setting</string>
    <string name="vilte_setting_content_label">Video parameter settings</string>
    <string name="vilte_setting_id_label">Operator ID</string>
    <string name="vilte_show_help">Using help</string>
    <string name="width">width</string>
</resources>