<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/hqa_nfc_title_type"/>
        <RadioGroup android:orientation="vertical" android:id="@+id/hqa_read_rg_tag_type" android:layout_width="match_parent" android:layout_height="wrap_content">
            <RadioButton android:enabled="false" android:id="@+id/hqa_read_rb_type_uri" android:text="@string/hqa_nfc_type_uri"/>
            <RadioButton android:enabled="false" android:id="@+id/hqa_read_rb_type_text" android:text="@string/hqa_nfc_type_text"/>
            <RadioButton android:enabled="false" android:id="@+id/hqa_read_rb_type_smart" android:text="@string/hqa_nfc_type_smart"/>
            <RadioButton android:enabled="false" android:id="@+id/hqa_read_rb_type_others" android:text="@string/hqa_nfc_type_others"/>
        </RadioGroup>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hqa_nfc_type_lang"/>
        <EditText android:enabled="false" android:id="@+id/hqa_read_tv_lang" android:layout_width="180dp" android:layout_height="wrap_content"/>
        <View android:background="#ff909090" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="5dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/hqa_nfc_title_ndef"/>
        <TableLayout android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_height="wrap_content" android:text="@string/hqa_nfc_record_flag"/>
                <EditText android:enabled="false" android:id="@+id/hqa_read_tv_flag" android:layout_width="210dp" android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_height="wrap_content" android:text="@string/hqa_nfc_record_id"/>
                <EditText android:enabled="false" android:id="@+id/hqa_read_tv_id" android:layout_width="210dp" android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_height="wrap_content" android:text="@string/hqa_nfc_record_inf"/>
                <EditText android:enabled="false" android:id="@+id/hqa_read_tv_inf" android:layout_width="210dp" android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_height="wrap_content" android:text="@string/hqa_nfc_payload_length"/>
                <EditText android:enabled="false" android:id="@+id/hqa_read_tv_length" android:layout_width="210dp" android:layout_height="wrap_content"/>
            </TableRow>
        </TableLayout>
        <View android:background="#ff909090" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="5dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/hqa_nfc_payload"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hqa_nfc_hex"/>
        <EditText android:enabled="false" android:id="@+id/hqa_read_tv_hex" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="5dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hqa_nfc_ascii"/>
        <EditText android:enabled="false" android:id="@+id/hqa_read_tv_ascii" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="5dp"/>
        <View android:background="#ff909090" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="5dp"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="10dp" android:layout_marginRight="30dp">
            <Button android:id="@+id/hqa_read_btn_read" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/hqa_nfc_rw_read" android:layout_weight="1"/>
            <Button android:id="@+id/hqa_read_btn_cancel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/hqa_nfc_rw_cancel" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
